/* Changes-1.07.txt */

--- New features -----

CondLangLR1

DDL2

Keywords

--- Updates ---

CCore/inc/Random.h

 RandomBase class and methods select_uint are added

CCore/inc/Exception.h

 ReportExceptionTo is added

----------------------